# ds

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  todo.md  tsconfig.json  vitest.config.ts  wrangler.jsonc
crates/cli/: Cargo.toml
crates/cli/src/: add.rs  bare_workspace.rs  boundary_sync.rs  checkout.rs  config.rs  daemon.rs  doctor.rs  git.rs  git_shim.rs  hidden.rs  init.rs  lib.rs  list.rs  main.rs  remove.rs  repo.rs  skill.rs  sync.rs  sync_status.rs  tree_modes.rs  tx.rs  working_copy.rs
crates/cli/src/context/: git.rs  lock.rs  manifest.rs  mod.rs  store.rs
crates/cli/src/git/: fetch.rs  projection_sidecar.rs  push.rs
crates/cli/tests/: add.rs  auto_track.rs  cli.rs  config.rs  context.rs  daemon.rs  git_fetch.rs  git_init.rs  git_push.rs  git_shim.rs  hidden.rs  json.rs  lifecycle.rs  repo_new.rs  repo_remove.rs  sync.rs  sync_live.rs  work_verbs.rs
crates/cli/tests/support/: fake_worker.rs  mod.rs  stalling_server.rs
crates/cli/tests/support_fs/: mod.rs
crates/kernel/: Cargo.toml
crates/kernel-git/: Cargo.toml
crates/kernel-git-oracle/: Cargo.toml
crates/kernel-git-oracle/src/: lib.rs  main.rs
crates/kernel-git-wasm/: Cargo.toml
crates/kernel-git-wasm/src/: lib.rs
crates/kernel-git/src/: commit.rs  lib.rs
crates/kernel-git/tests/: git_golden.rs  git_golden_oracle.txt  ops_golden.rs  ops_golden.txt
crates/kernel-oracle/: Cargo.toml
crates/kernel-oracle/src/: lib.rs  main.rs
crates/kernel-wasm/: Cargo.toml
crates/kernel-wasm/src/: lib.rs
crates/kernel/src/: backend.rs  error.rs  hash.rs  hidden.rs  lib.rs  op_store.rs  proto.rs  tree.rs
crates/kernel/src/ops/: hash.rs  mod.rs  proto.rs  validate.rs
crates/kernel/tests/: git_golden.rs  git_golden.txt  git_golden_oracle.txt  jj_golden.rs  jj_golden.txt  ops_golden.rs  ops_golden.txt  v2_golden.rs  v2_golden.txt
crates/machine/: Cargo.toml
crates/machine-git/: Cargo.toml
crates/machine-git/src/: git_subprocess.rs  http_transport.rs  install.rs  journal_flow.rs  lib.rs  lift.rs  object_closure.rs  op_sync.rs  pack.rs  pack_manifest.rs  projection.rs  store.rs
crates/machine-git/tests/: http_transport.rs  journal.rs  lift.rs  op_sync.rs  projection.rs  proofs.rs
crates/machine/src/: checkout_creation.rs  control_plane_client.rs  creation_intent.rs  fsync.rs  git_lift.rs  git_projection.rs  git_subprocess.rs  http_client.rs  http_transport.rs  install.rs  journal_flow.rs  lib.rs  lift.rs  locked_json.rs  machine_config.rs  machine_store.rs  object_closure.rs  op_sync.rs  op_sync_state.rs  pack.rs  pack_manifest.rs  projection.rs  projection_transport.rs  reconciliation_tests.rs  store.rs  sync_engine.rs  sync_state.rs  wire.rs
crates/machine/src/git_subprocess/: fetch.rs
crates/machine/src/machine_store/: repository_clone.rs
crates/machine/tests/: cloud_live.rs  creation_intent.rs  git_lift.rs  git_projection.rs  git_subprocess.rs  http_transport.rs  journal.rs  lift.rs  machine_config.rs  machine_store.rs  native_repository.rs  object_closure.rs  op_sync.rs  pack.rs  pack_install.rs  projection.rs  projection_live.rs  projection_transport.rs  proofs.rs  reconciliation.rs  sync_engine.rs  warm_latency.rs
crates/machine/tests/common/: mod.rs
docs/: git-fetch.md  git-projection.md  git-push.md  hidden.md  kernel.md  sign-on-export-memo.md  sign-on-export.md  sign-rewritten.md  spike-1.md  spike-2.md  spike-3.md  swap-spikes-night-report.md  swap-spikes.md  sync.md
docs/archive/: probe-fetch-import-lift.md  probe-lease-push.md  probe-warm-command.md
scripts/: build-wasm.mjs
src/: auth.ts  closure_authority.ts  control_plane.ts  head_protocol.ts  head_store.ts  kernel.ts  kernel_git.ts  object_protocol.ts  op_git_store.ts  op_protocol.ts  op_store.ts  pack_git_protocol.ts  pack_git_store.ts  pack_protocol.ts  pack_store.ts  projection_git_protocol.ts  projection_git_store.ts  projection_protocol.ts  projection_store.ts  remote_protocol.ts  repository.ts  repository_git.ts  router.ts  router_git.ts  schema.ts  schema_git.ts  validation.ts  wasm.d.ts  worker.ts
test/: control_plane.test.ts  env.d.ts  kernel_git_wasm.test.ts  kernel_wasm.test.ts  projection.test.ts  projection_git.test.ts  repository.test.ts  repository_git.test.ts  worker.test.ts
test/fixtures/: repository.json  repository_git.json
