[workspace]
members = ["crates/kernel", "crates/kernel-wasm", "crates/machine"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.97"

[workspace.dependencies]
blake2 = "0.10.6"
jj-lib = { version = "=0.42.0", default-features = false }
prost = "=0.14.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "=3.27.0"
thiserror = "=2.0.18"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
