[workspace]
members = ["crates/cli", "crates/kernel", "crates/kernel-wasm", "crates/machine"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.97"

[workspace.dependencies]
async-trait = "=0.1.89"
blake2 = "0.10.6"
clap = { version = "=4.6.2", features = ["derive"] }
dunce = "=1.0.5"
getrandom = "=0.4.3"
futures = "=0.3.32"
jj-cli = "=0.42.0"
jj-lib = { version = "=0.42.0", default-features = false, features = ["git"] }
prost = "=0.14.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "=3.27.0"
thiserror = "=2.0.18"
toml = "=1.1.2"
tracing = "=0.1.44"
rustix = { version = "=1.1.4", features = ["event", "fs", "net", "process"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
