[package]
name = "devspace-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "ds"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.103"
async-trait.workspace = true
blake2.workspace = true
clap.workspace = true
devspace-machine = { path = "../machine" }
devspace-machine-git = { path = "../machine-git" }
dunce.workspace = true
etcetera.workspace = true
futures.workspace = true
getrandom.workspace = true
gix.workspace = true
jj-cli.workspace = true
jj-lib.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { version = "=1.52.3", features = ["rt"] }
toml.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
rustix.workspace = true

[dev-dependencies]
tokio = { version = "=1.52.3", features = ["macros"] }
