[package]
name = "devspace-kernel-git-oracle"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
devspace-kernel-git = { path = "../kernel-git" }
futures.workspace = true
jj-lib.workspace = true
tempfile.workspace = true

[[bin]]
name = "kernel-git-oracle"
path = "src/main.rs"
