[package]
name = "devspace-machine-git"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake2.workspace = true
devspace-kernel-git = { path = "../kernel-git" }
gix.workspace = true
jj-lib.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread"] }
