[package]
name = "devspace-machine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
jj-lib.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "=3.27.0"
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread"] }
